--- a/package.json
+++ b/package.json
@@ -2,7 +2,18 @@
   "name": "neeto-jwt",
   "description": "A client to generate JWT for JWT-based login in Neeto.",
   "devDependencies": {
-    "husky": "9.1.7"
+    "@eslint/js": "9.23.0",
+    "eslint": "9.23.0",
+    "globals": "16.0.0",
+    "husky": "9.1.7",
+    "lint-staged": "15.5.0",
+    "typescript-eslint": "8.28.0"
+  },
+  "lint-staged": {
+    "./**/*.{js,ts,mjs,cjs,json}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   },
   "scripts": {
     "prepare": "husky"
