--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "devDependencies": {
     "@eslint/js": "9.23.0",
     "eslint": "9.23.0",
+    "eslint-config-prettier": "10.1.1",
+    "eslint-plugin-prettier": "5.2.5",
     "globals": "16.0.0",
     "husky": "9.1.7",
     "lint-staged": "15.5.0",
+    "prettier": "3.5.3",
     "typescript-eslint": "8.28.0"
   },
   "lint-staged": {
