Added @types/node to satisfy GitHub actions requirements

--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ESNext",
     "module": "NodeNext",
     "lib": ["ES2020"],
+    "types": ["node"],
 
     /* Bundler mode */
     "moduleResolution": "NodeNext",
