--- a/js/package.json
+++ b/js/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
+    "@types/node": "22.13.14",
     "ts-node": "10.9.2",
     "typescript": "5.7.2"
   }
