--- a/js/package.json
+++ b/js/package.json
@@ -9,7 +9,7 @@
   "types": "./dist/index.d.ts",
   "exports": {
     "import": "./dist/index.js",
-    "require": "./dist/index.cjs"
+    "require": "./dist/index.js"
   },
   "scripts": {
     "build": "tsc",
