Replaced JS-Devtools/npm-publish with the default node action for publishing to NPM

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -73,8 +73,6 @@ jobs:
           branch: main
 
       - name: Publish the package on NPM
-        uses: JS-DevTools/npm-publish@v3
-        with:
-          access: "public"
-          token: ${{ secrets.NPM_TOKEN }}
-          package: "./js"
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
